--- a/publisher/Dockerfile
+++ b/publisher/Dockerfile
@@ -1,11 +1,10 @@
 # Docker image containing the ESGF publisher client
 
+FROM $ESGF_IMAGES_HUB/esgf-node:$ESGF_VERSION
+MAINTAINER Earth System Grid Federation <esgf-devel@lists.llnl.gov>
+
 ARG ESGF_IMAGES_HUB=esgfhub
 ARG ESGF_VERSION=devel
-
-FROM $ESGF_IMAGES_HUB/esgf-node:$ESGF_VERSION
-
-MAINTAINER ESGF <esgf-devel@lists.llnl.gov>
 
 # default ESGF repository
 ARG ESGF_REPO=http://distrib-coffee.ipsl.jussieu.fr/pub/esgf
