--- a/tds/Dockerfile
+++ b/tds/Dockerfile
@@ -1,12 +1,11 @@
 # Docker image containing the THREDDS Data Server (TDS) 
 # customized with ESGF access control filters
 
+FROM $ESGF_IMAGES_HUB/esgf-tomcat:$ESGF_VERSION
+MAINTAINER Earth System Grid Federation <esgf-devel@lists.llnl.gov>
+
 ARG ESGF_IMAGES_HUB=esgfhub
 ARG ESGF_VERSION=devel
-
-FROM $ESGF_IMAGES_HUB/esgf-tomcat:$ESGF_VERSION
-
-MAINTAINER ESGF <esgf-devel@lists.llnl.gov>
 
 # default ESGF repository
 ARG ESGF_REPO=http://distrib-coffee.ipsl.jussieu.fr/pub/esgf
