Fixing supervisor script.

--- a/dashboard/conf/supervisord.dashboard.conf
+++ b/dashboard/conf/supervisord.dashboard.conf
@@ -1,10 +1,9 @@
 [program:dashboard]
 
-#command=sh -c "/usr/local/bin/wait_for_postgres.sh && %(ENV_DASHBOARD_HOME)s/bin/ip.service start"
-command=%(ENV_DASHBOARD_HOME)s/bin/ip.service start
+command=%(ENV_DASHBOARD_HOME)s/bin/esgf-dashboard-ip
 process_name=%(program_name)s
 startsecs=5
-user=dashboard
-numprocs=1 
-stdout_logfile=%(ENV_DASHBOARD_HOME)s/logs/esgf_dashboard.log
+user=root
+numprocs=1
+stdout_logfile=/tmp/esgf_dashboard.log
 redirect_stderr=true
