Changing the cookie name.

--- a/esgf_config/webapps/thredds/WEB-INF/web.xml
+++ b/esgf_config/webapps/thredds/WEB-INF/web.xml
@@ -107,7 +107,7 @@
     <init-param>
       <!-- cookie set by the authentication service containing a user's openid -->
       <param-name>sessionCookieName</param-name>
-      <param-value>esg.openid.saml.cookie</param-value>
+      <param-value>exchange-cookie</param-value>
     </init-param>
     <init-param>
       <!-- base64 encoded secret key used to encrypt the cookie: -->
