Postgres container working

--- a/postgres/Dockerfile
+++ b/postgres/Dockerfile
@@ -5,38 +5,24 @@ ARG ESGF_VERSION=devel
 FROM $ESGF_IMAGES_HUB/esgf-node:$ESGF_VERSION
 MAINTAINER Earth System Grid Federation <esgf-devel@lists.llnl.gov>
 
-# install and configure postgres
-RUN yum -y update; yum clean all
-RUN yum -y install postgresql-server postgresql postgresql-contrib; yum clean all
+# Install postgres
+RUN yum -y update \
+    && yum -y install postgresql-server postgresql postgresql-contrib \
+    && yum clean all
 
-# copy postgres + ESGF scripts
-ADD ./scripts/ /usr/local/bin/
+# Build the UTF-8 locale so postgres is UTF-8 enabled
+RUN localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8
+ENV LANG en_US.utf8
 
-# copy ESGF sql schemas and data
-ADD ./sqldata/ /usr/local/bin/
+# Copy ESGF sql schemas and data
+COPY ./sqldata/ /usr/local/bin/
 
-# setup postgres
-RUN /usr/local/bin/postgres_setup.sh initdb
+VOLUME /var/lib/pgsql/data
+ENV PGDATA /var/lib/pgsql/data
 
-# configuration
-# log file: /var/lib/pgsql/data/pg_log/postgres.log
-ADD ./conf/postgresql.conf /var/lib/pgsql/data/postgresql.conf
-RUN chown -v postgres.postgres /var/lib/pgsql/data/postgresql.conf
-RUN echo "host    all             all             0.0.0.0/0               md5" >> /var/lib/pgsql/data/pg_hba.conf
-
-# load ESGF schemas into postgres database
-RUN /usr/local/bin/postgres_setup_esgf.sh
-
-# IMPORTANT: change connections to require encrypted password
-RUN sed -i 's/ident/md5/g' /var/lib/pgsql/data/pg_hba.conf
-
-# scripted commands use password in ~/.pgpass
-RUN echo 'localhost:5432:cogdb:dbsuper:changeit' > /root/.pgpass
-RUN echo 'localhost:5432:esgcet:dbsuper:changeit' >> /root/.pgpass
-RUN chmod 0600 /root/.pgpass
+# Copy the entrypoint script, which configures postgres before launching it
+COPY docker-entrypoint.sh /usr/local/bin/
+ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 
 EXPOSE 5432
-
-# add supervisor configuration for postgres service
-ADD ./conf/supervisord.postgres.conf /etc/supervisor/conf.d/supervisord.postgres.conf
-CMD ["supervisord", "--nodaemon", "-c", "/etc/supervisord.conf"]
+CMD ["postgres", "-D", "/var/lib/pgsql/data", "-h", "0.0.0.0"]
