Adding EsgfSwarmNode configuration

--- a/aws/EsgfSwarmNode.config
+++ b/aws/EsgfSwarmNode.config
@@ -13,7 +13,7 @@ Content-Type: text/x-shellscript; charset="us-ascii"
 #!/bin/bash
 # Set any ECS agent configuration options
 echo "ECS_CLUSTER=EsgfCluster" >> /etc/ecs/ecs.config
-echo "ECS_INSTANCE_ATTRIBUTES={\"esgf_type\":\"master_node\"}" >> /etc/ecs/ecs.config
+#echo "ECS_INSTANCE_ATTRIBUTES={\"esgf_type\":\"master_node\"}" >> /etc/ecs/ecs.config
 
 # mount the EFS file system
 # must also restart docker and docker agent for the file system to become available to docker containers
@@ -38,6 +38,6 @@ echo "ESGF_VERSION=1.4" >> /etc/environment
 echo "SOLR_DATA=/esgf_data/solr_data" >> /etc/environment
 echo "COG_DATA=/esgf_data/cog_data" >> /etc/environment
 echo "TDS_DATA=/esgf_data/tds_data" >> /etc/environment
-echo "ESGF_DATA_ARCHIVE=/esgf_data/data_archive" >> /etc/environment
+echo "ESGF_DATA_DIR=/esgf_data/data_archive" >> /etc/environment
 
 --==BOUNDARY==--
