create gridftp container ; fix wget outpout ; factorize some ENV variabels

--- a/esgf_config/esg/config/esgf.properties
+++ b/esgf_config/esg/config/esgf.properties
@@ -44,3 +44,7 @@ dashboard.service.app.home=/usr/local/tomcat/webapps/esgf-dashboard
 node.peer.group=esgf-test
 # short lived certificate server
 short.lived.certificate.server=my.esgf.node
+# GridFTP
+gridftp.server.port=2811
+gridftp.app.home=/usr/sbin/globus-gridftp-server
+gridftp.endpoint=gsiftp://localhost
