--- a/tomcat/Dockerfile
+++ b/tomcat/Dockerfile
@@ -10,7 +10,7 @@ MAINTAINER Earth System Grid Federation <esgf-devel@lists.llnl.gov>
 # Tomcat 8
 ENV TOMCAT_VERSION 8.5.23
 
-RUN wget -O /tmp/apache-tomcat-${TOMCAT_VERSION}.tar.gz http://archive.apache.org/dist/tomcat/tomcat-8/v${TOMCAT_VERSION}/bin/apache-tomcat-${TOMCAT_VERSION}.tar.gz && \
+RUN wget -q -O /tmp/apache-tomcat-${TOMCAT_VERSION}.tar.gz http://archive.apache.org/dist/tomcat/tomcat-8/v${TOMCAT_VERSION}/bin/apache-tomcat-${TOMCAT_VERSION}.tar.gz && \
     cd /usr/local && tar xzf /tmp/apache-tomcat-${TOMCAT_VERSION}.tar.gz && \
     ln -s /usr/local/apache-tomcat-${TOMCAT_VERSION} /usr/local/tomcat && \
     rm /tmp/apache-tomcat-${TOMCAT_VERSION}.tar.gz
