add a new env variable

--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -107,6 +107,7 @@ ENV ESGF_LOG_DIR="$ESGF_HOME/log"
 ENV ESGF_TOOL_DIR="$ESGF_HOME/tools"
 ENV ESGF_CONFIG_DIR="$ESGF_HOME/config"
 ENV ESGF_CONTENT_DIR="$ESGF_HOME/content"
+ENV ESGF_DEFAULT_TEST_DATA_DIR="$ESGF_HOME/data/test"
 
 # common ESGF directories
 RUN mkdir -p "$ESGF_LOG_DIR"
