create a minimal image

--- a/gridftp/Dockerfile
+++ b/gridftp/Dockerfile
@@ -5,7 +5,8 @@
 ARG ESGF_IMAGES_HUB=esgfhub
 ARG ESGF_VERSION=devel
 
-FROM $ESGF_IMAGES_HUB/esgf-node:$ESGF_VERSION
+FROM $ESGF_IMAGES_HUB/esgf-minimal-node:$ESGF_VERSION
+
 MAINTAINER Earth System Grid Federation <esgf-devel@lists.llnl.gov>
 
 ### ARGS
@@ -25,9 +26,13 @@ RUN useradd -g "$GLOBUS_ACCOUNT" -m -s /bin/bash "$GLOBUS_ACCOUNT"
 
 ############################### INSTALLATION ###################################
 
+### OS packages
+RUN yum install -y wget perl-DBD-Pg tar xz
+
 RUN wget -qO globus-connect-server-repo-latest.noarch.rpm http://toolkit.globus.org/ftppub/globus-connect-server/globus-connect-server-repo-latest.noarch.rpm
 RUN rpm --import http://www.globus.org/ftppub/globus-connect-server/RPM-GPG-KEY-Globus
 RUN rpm -i globus-connect-server-repo-latest.noarch.rpm
+RUN rm -f globus-connect-server-repo-latest.noarch.rpm
 # That fix the warning 'Warning: RPMDB altered outside of yum'
 RUN yum history new
 RUN yum -y install udt.x86_64 globus-connect-server-io
@@ -61,8 +66,6 @@ COPY conf/globus-connect-esgf /etc/gridftp.d/
 
 ### Setup GridFTP metrics logging
 
-RUN yum -y install perl-DBD-Pg
-
 RUN wget -qO- "$ESGF_REPO/dist/globus/gridftp/esg_usage_parser-$USAGE_PARSER_VERSION.tar.bz2" | tar xvj -C "/tmp"
 RUN mv /tmp/esg_usage_parser "$ESGF_TOOL_DIR"
 RUN chmod 755 "$ESGF_TOOL_DIR/esg_usage_parser"
@@ -79,6 +82,11 @@ COPY conf/esg-server-usage-gridftp.conf $ESGF_GRIDFTP_CONFIG_DIR
 
 RUN mkdir -p $ESGF_GRIDFTP_JAIL_DIR
 
+
 #??? so as to run the container with the id: globus
 RUN chown -R "$GLOBUS_ACCOUNT":"$GLOBUS_ACCOUNT" /etc/gridftp.d/
 RUN chown -R "$GLOBUS_ACCOUNT":"$GLOBUS_ACCOUNT" /etc/grid-security
+
+# Post installation instructions
+RUN yum erase -y wget
+RUN yum clean all
