--- a/cog/Dockerfile
+++ b/cog/Dockerfile
@@ -106,7 +106,7 @@ COPY  conf/supervisord.cog.conf /etc/supervisor/conf.d/supervisord.cog.conf
 #COPY  scripts/wait_for_postgres.sh /usr/local/bin/wait_for_postgres.sh
 #COPY  scripts/process_esgf_config_archive.sh /usr/local/bin/process_esgf_config_archive.sh
 
-# wait for Postgred connection to be ready
+# wait for Postgres connection to be ready
 ENTRYPOINT ["/usr/local/bin/docker-entrypoint.sh"]
 # will override these CMD options at run time
 CMD ["localhost", "false", "true"]
