--- a/kubernetes/esgf-ingress-https.yaml
+++ b/kubernetes/esgf-ingress-https.yaml
@@ -4,7 +4,8 @@ metadata:
   name: esgf-ingress
   annotations:
     ingress.kubernetes.io/rewrite-target: /
-    ingress.kubernetes.io/ssl-redirect: "false"
+    ingress.kubernetes.io/ssl-redirect: "true"
+    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
 spec:
   tls:
   - hosts:
